ACE-3364, ACE-2997: Added MoreInfo link to search details view as requested (includes accessibility updates to MoreInfo to include contextual alt text and title), fixed white list actions problem uncovered along the way and some other minor non-production feature Aikau updates.
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@89504 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/js/alfresco/renderers/css/MoreInfo.css
+++ b/root/projects/slingshot/source/web/js/alfresco/renderers/css/MoreInfo.css
@@ -3,6 +3,11 @@
    background-image: url(./images/show-detail.png);
    width: 16px;
    height: 16px;
+   display: inline-block;
+}
+
+.alfresco-renderers-MoreInfo.darkIcon {
+   background-image: url(./images/info-16.png);
 }
 
 .alfresco-dialog-AlfDialog .alfresco-renderers-Thumbnail img {
